--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,36 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+h1 {
+  font-size: 1.1em;
+}
+.menu-container {
+  width: "30px";
+  height: "30px";
+  position: fixed;
+  top: 0;
+}
+.menu-dropdown {
+  border-radius: 5px;
+}
+.menu-dropdown-body {
+  background: #fff;
+  max-width: 300px;
+  padding: 10px 5px;
+  cursor: pointer;
+}
+.menu-dropdown-body:hover {
+  background: #f2f2f2;
+}
+.menu-dropdown-button{
+  width: "30px";
+  height: "30px";
+  padding: 5px 20px;
+  background: #232323;
+  color:white;
+  border:none;
+  border-radius: 5px;
 }
